# LpGL_ML1

./: .gitignore  LpGL.sln
EyeTrackingExample/: EyeTrackingExample.vcxproj  EyeTrackingExample.vcxproj.filters  SimpleNativeApp.mabu  SimpleNativeApp.package  main.cpp  manifest.xml  util.cc  util.h
FrameScaler/: FrameScaler.mabu  FrameScaler.package  FrameScaler.vcxproj  FrameScaler.vcxproj.filters  Makefile  helix_by_10.comp  manifest.xml  models.comp  models.comp.origin  objqual.comp  shaders.comp  spheres.comp  spheres_by_10.comp  spheres_by_5.comp  texture.comp
FrameScaler/inc/: App.h  BoundingBox.h  CImg.h  Camera.h  Experiment.h  FidelityScene.h  FrameScalerSampleApp.h  ImageBasedDynamicsScene.h  (+8 more)
LpGL/: LpGL.mabu  LpGL.vcxproj  LpGL.vcxproj.filters
LpGL_win32/: LpGL_win32.vcxproj  LpGL_win32.vcxproj.filters  Win32NativeWindow.cpp  Win32NativeWindow.h  main.cpp
simple_demo/: CMakeLists.txt  Makefile  TODO.md  manifest.xml  models.comp  shaders.comp  simple_demo_lpgl.mabu  simple_demo_lpgl.package
simple_demo/inc/: App.h  Camera.h  Experiment.h  FrameScalerSampleApp.h  LpGLEngine.h  MeshLoader.h  ModelObj.h  NotImplementedException.h  ObjectQuqlityScene.h  QDSEvaluationScene.h  Quad.h  ShaderUtils.h  SimpleDemoApp.h  Simplify.h  graphics_context_t.h  tinyobjloader.h
simple_demo/models/: 69K_2.mtl  69K_30.0.mtl  69K_82.5.mtl  69K_abnormal.mtl  69K_abnormal2.mtl  69K_abnormal2_10.0.mtl  69K_abnormal2_2.mtl  69K_abnormal3_5.0.mtl  69K_abnormal_0.mtl  69K_abnormal_1.0.mtl  69K_abnormal_10.0.mtl  69K_abnormal_2.mtl  69K_abnormal_5.0.mtl  69K_with_highressphere.mtl  capsule_1.mtl  helix_2.mtl  sphere.mtl  sphere_92.5.mtl  standard_sphere.mtl  torus.mtl
simple_demo/shaders/: green.frag  normal.vert  phong.frag  phong.vert  red.frag  texture.frag
simple_demo/src/: FidelityScene.cpp  FrameScalerSampleApp.cpp  ImageBasedSampleApp.cpp  LpGLEngine.cpp  MLNativeWindow.cpp  Main.cpp  MeshLoader.cpp  ModelObj.cpp  ObjectQualityScene.cpp  QDSEvaluationScene.cpp  Quad.cpp  ShaderUtils.cpp  SimpleDemoApp.cpp  VaryingFocusAngleScene.cpp  graphics_context_t.cpp
(+41 files in other folders)
